objects/Staff_Profile_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shift_Key__c</fullName>
        <externalId>true</externalId>
        <label>Shift Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skedulo_Tag_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skedulo Tag</label>
        <referenceTo>sked__Tag__c</referenceTo>
        <relationshipLabel>Staff Profile Attributes</relationshipLabel>
        <relationshipName>Staff_Profile_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Staff Profile Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Skedulo_Tag_ID__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Staff Profile Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Profile Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>